--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,28 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  padding: 0.2rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #666;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
 body {
   margin: 0;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -14,8 +36,13 @@ body {
   color: #fff;
 }
 
+.row {
+  margin: 0 !important;
+}
+
 .__navbar {
   width: 100%;
+  height: 70px;
   position: sticky;
   top: 0;
   left: 0;
@@ -25,11 +52,15 @@ body {
 .__navbar .navbar {
   padding: 0.3rem 1rem;
 }
+.__navbar .navbar .navbar-brand a {
+  text-decoration: none;
+}
 .__navbar .navbar .navbar-brand h2 {
   margin: 0;
+  margin-left: 0.3rem;
   color: #fff;
   font-weight: 800;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   letter-spacing: -1px;
 }
 .__navbar .navbar .input-group {
@@ -47,7 +78,7 @@ body {
 }
 .__navbar .navbar .input-group input:focus {
   box-shadow: none !important;
-  border-color: #0096ff;
+  border-color: #3498db;
 }
 .__navbar .navbar .input-group button {
   background-color: rgba(255, 255, 255, 0.1);
@@ -79,9 +110,33 @@ body {
 .__navbar .btn-round:active {
   background-color: rgba(255, 255, 255, 0.15);
 }
+.__navbar .loading-bar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0px;
+  background-color: #3498db;
+  z-index: 100000;
+  animation: loading-bar-animation 1s linear;
+}
+@keyframes loading-bar-animation {
+  0% {
+    height: 2px;
+    left: -85%;
+  }
+  100% {
+    height: 2px;
+    left: 100%;
+  }
+}
 
 .__sidemenu {
-  padding: 0 1rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  padding: 1rem 3rem 4rem 0;
 }
 .__sidemenu button {
   width: 100%;
@@ -100,33 +155,39 @@ body {
 .__sidemenu button:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
-.__sidemenu button:active, .__sidemenu button.active {
+.__sidemenu button:active {
   background-color: rgba(255, 255, 255, 0.15);
 }
+.__sidemenu a.active button {
+  background-color: rgba(52, 152, 219, 0.2);
+  font-weight: 800;
+  color: #3498db;
+}
+.__sidemenu a.active svg {
+  fill: #3498db;
+}
 
-.row {
+.__home > .row > div:last-child {
+  padding: 0;
+}
+.__home .__video-container .__video a {
   width: 100%;
-}
-.row > div:last-child {
-  padding-bottom: 5rem;
-}
-
-.__video a {
+  display: block;
   text-decoration: none;
   color: inherit;
 }
-.__video .video .thumbnail {
+.__home .__video-container .__video .video .thumbnail {
   position: relative;
   width: 100%;
 }
-.__video .video .thumbnail img {
+.__home .__video-container .__video .video .thumbnail img {
   width: 100%;
-  height: 200px;
-  background-color: #fff;
+  aspect-ratio: 16/9;
+  background-color: rgba(255, 255, 255, 0.1);
   object-fit: cover;
   border-radius: 0.8rem;
 }
-.__video .video .thumbnail span {
+.__home .__video-container .__video .video .thumbnail span {
   position: absolute;
   bottom: 0.5rem;
   right: 0.5rem;
@@ -135,25 +196,80 @@ body {
   border-radius: 0.2rem;
   padding: 0 0.2rem;
 }
-.__video .video .info {
+.__home .__video-container .__video .video .info {
   padding: 0.8rem 0.2rem;
 }
-.__video .video .info img {
+.__home .__video-container .__video .video .info img {
   width: 30px;
   height: 30px;
   border-radius: 10rem;
   object-fit: cover;
 }
-.__video .video .info p {
+.__home .__video-container .__video .video .info p {
   font-size: 0.8rem;
   padding: 0 1rem;
   margin: 0;
   text-transform: capitalize;
 }
-.__video .video:active {
+.__home .__video-container .__video .video:hover {
+  opacity: 0.7;
+}
+.__home .__video-container .__video .video:active {
   background-color: rgba(255, 255, 255, 0.1);
   border-top-left-radius: 0.8rem;
   border-top-right-radius: 0.8rem;
   outline: 1px solid rgba(255, 255, 255, 0.2);
-  opacity: 0.8;
+  opacity: 1;
+}
+
+.__watch {
+  padding: 1rem 5rem;
+  padding-bottom: 10rem;
+}
+.__watch .row > div:first-child {
+  padding: 0 2rem;
+}
+.__watch .videobox img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 16/9;
+}
+.__watch .videobox h3 {
+  font-weight: 800;
+  padding-top: 1rem;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+}
+.__watch .videobox .row {
+  padding: 0.1rem 0;
+}
+.__watch .videobox .row > div {
+  display: flex;
+  align-items: center;
+}
+.__watch .videobox .row > div .profilePicture {
+  width: 40px;
+  height: 40px;
+  border-radius: 10rem;
+  object-fit: cover;
+}
+.__watch .videobox .row > div button {
+  background-color: #fff;
+  color: rgba(15, 15, 15, 0.88);
+  font-weight: 800;
+  font-size: 0.85rem;
+  padding: 0.35rem 1rem;
+  margin-left: 1rem;
+}
+.__watch .videobox .row > div .profile {
+  padding: 0 0.8rem;
+  line-height: 1rem;
+}
+.__watch .videobox .row > div .profile p {
+  margin: 0;
+  font-size: 0.7rem;
+}
+.__watch .videobox .row > div .profile span {
+  font-size: 0.7rem;
+  color: rgba(255, 255, 255, 0.5);
 }
