--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,34 @@
 
 $primary-color: #0f0f0f;
 $primary-text-color: #fff;
-$primary-other-color: #0096ff;
+$primary-other-color: #3498db;
 
 * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+ width: 7px;
+}
+
+::-webkit-scrollbar-track {
+ background-color: transparent;
+ padding: 0.2rem;
+}
+
+::-webkit-scrollbar-thumb {
+ background-color: #888;
+ border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+ background-color: #666;
+}
+
+::-webkit-scrollbar-button {
+ display: none;
 }
 
 body {
@@ -20,8 +42,13 @@ body {
  color: $primary-text-color;
 }
 
+.row {
+ margin: 0 !important;
+}
+
 .__navbar {
  width: 100%;
+ height: 70px;
  position: sticky;
  top: 0;
  left: 0;
@@ -29,12 +56,18 @@ body {
  z-index: 1000;
  .navbar {
   padding: 0.3rem 1rem;
-  .navbar-brand h2 {
-   margin: 0;
-   color: $primary-text-color;
-   font-weight: 800;
-   font-size: 1.5rem;
-   letter-spacing: -1px;
+  .navbar-brand {
+   a {
+    text-decoration: none;
+   }
+   h2 {
+    margin: 0;
+    margin-left: 0.3rem;
+    color: $primary-text-color;
+    font-weight: 800;
+    font-size: 1.3rem;
+    letter-spacing: -1px;
+   }
   }
   .input-group {
    max-width: 600px;
@@ -84,10 +117,35 @@ body {
    background-color: rgba($primary-text-color, 0.15);
   }
  }
+ .loading-bar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0px;
+  background-color: $primary-other-color;
+  z-index: 100000;
+  animation: loading-bar-animation 1s linear;
+ }
+
+ @keyframes loading-bar-animation {
+  0% {
+   height: 2px;
+   left: -85%;
+  }
+  100% {
+   height: 2px;
+   left: 100%;
+  }
+ }
 }
 
 .__sidemenu {
- padding: 0 1rem;
+ position: sticky;
+ top: 0;
+ left: 0;
+ z-index: 999;
+ padding: 1rem 3rem 4rem 0;
  button {
   width: 100%;
   padding: 0.5rem 0.8rem;
@@ -104,67 +162,135 @@ body {
   &:hover {
    background-color: rgba($primary-text-color, 0.1);
   }
-  &:active,
-  &.active {
+  &:active {
    background-color: rgba($primary-text-color, 0.15);
   }
  }
-}
-
-.row {
- width: 100%;
- & > div:last-child {
-  padding-bottom: 5rem;
+ a.active {
+  button {
+   background-color: rgba($primary-other-color, 0.2);
+   font-weight: 800;
+   color: $primary-other-color;
+  }
+  svg {
+   fill: $primary-other-color;
+  }
  }
 }
 
-.__video {
- a {
-  text-decoration: none;
-  color: inherit;
+.__home {
+ & > .row > div:last-child {
+  padding: 0;
  }
- .video {
-  .thumbnail {
-   position: relative;
-   width: 100%;
-   img {
+ .__video-container {
+  .__video {
+   a {
     width: 100%;
-    height: 200px;
-    background-color: #fff;
-    object-fit: cover;
-    border-radius: 0.8rem;
+    display: block;
+    text-decoration: none;
+    color: inherit;
    }
-   span {
-    position: absolute;
-    bottom: 0.5rem;
-    right: 0.5rem;
-    font-size: 0.8rem;
-    background-color: #1e1e1e;
-    border-radius: 0.2rem;
-    padding: 0 0.2rem;
+   .video {
+    .thumbnail {
+     position: relative;
+     width: 100%;
+     img {
+      width: 100%;
+      aspect-ratio: 16/9;
+      background-color: rgba($primary-text-color, 0.1);
+      object-fit: cover;
+      border-radius: 0.8rem;
+     }
+     span {
+      position: absolute;
+      bottom: 0.5rem;
+      right: 0.5rem;
+      font-size: 0.8rem;
+      background-color: #1e1e1e;
+      border-radius: 0.2rem;
+      padding: 0 0.2rem;
+     }
+    }
+    .info {
+     padding: 0.8rem 0.2rem;
+     img {
+      width: 30px;
+      height: 30px;
+      border-radius: 10rem;
+      object-fit: cover;
+     }
+     p {
+      font-size: 0.8rem;
+      padding: 0 1rem;
+      margin: 0;
+      text-transform: capitalize;
+     }
+    }
+    &:hover {
+     opacity: 0.7;
+    }
+    &:active {
+     background-color: rgba($primary-text-color, 0.1);
+     border-top-left-radius: 0.8rem;
+     border-top-right-radius: 0.8rem;
+     outline: 1px solid rgba($primary-text-color, 0.2);
+     opacity: 1;
+    }
    }
   }
-  .info {
-   padding: 0.8rem 0.2rem;
-   img {
-    width: 30px;
-    height: 30px;
-    border-radius: 10rem;
-    object-fit: cover;
-   }
-   p {
-    font-size: 0.8rem;
-    padding: 0 1rem;
-    margin: 0;
-    text-transform: capitalize;
-   }
+ }
+}
+
+.__watch {
+ padding: 1rem 5rem;
+ padding-bottom: 10rem;
+ .row > div:first-child{
+    padding: 0 2rem;
+ }
+ .videobox {
+  img {
+   width: 100%;
+   object-fit: cover;
+   aspect-ratio: 16/9;
   }
-  &:active {
-   background-color: rgba($primary-text-color, 0.1);
-   border-top-left-radius: 0.8rem;
-   border-top-right-radius: 0.8rem;
-   outline: 1px solid rgba($primary-text-color, 0.2);
-   opacity: 0.8;
+  h3 {
+   font-weight: 800;
+   padding-top: 1rem;
+   font-size: 1.2rem;
+   text-transform: capitalize;
+  }
+  .row {
+   padding: 0.1rem 0;
+   & > div {
+    display: flex;
+    align-items: center;
+    .profilePicture {
+     width: 40px;
+     height: 40px;
+     border-radius: 10rem;
+     object-fit: cover;
+    }
+    button {
+     background-color: $primary-text-color;
+     color: rgba($primary-color, 0.88);
+     font-weight: 800;
+     font-size: 0.85rem;
+     padding: 0.35rem 1rem;
+     margin-left: 1rem;
+    }
+    .profile {
+     padding: 0 0.8rem;
+     line-height: 1rem;
+     p {
+      margin: 0;
+      font-size: 0.7rem;
+     }
+     span {
+      font-size: 0.7rem;
+      color: rgba($primary-text-color, 0.5);
+     }
+    }
+   }
   }
  }
 }
