--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@ $primary-other-color: #3498db;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
+ scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
