--- a/src/App.scss
+++ b/src/App.scss
@@ -357,6 +357,10 @@ body {
     .heading{
         font-weight: 800;
         margin: 0;
+        svg{
+            fill: $primary-text-color;
+            margin-right: 0.5rem;
+        }
     }
     .count{
         margin: 0;
