--- a/src/App.css
+++ b/src/App.css
@@ -214,16 +214,31 @@ body {
   padding: 0.8rem 0.2rem;
 }
 .__home .__video-container .__video .video .info img {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 10rem;
+  background-color: rgba(255, 255, 255, 0.1);
   object-fit: cover;
 }
 .__home .__video-container .__video .video .info p {
   font-size: 0.8rem;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   margin: 0;
   text-transform: capitalize;
+}
+.__home .__video-container .__video .video .info .details {
+  line-height: 0.78rem;
+  padding-top: 0.2rem;
+}
+.__home .__video-container .__video .video .info .details span {
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0 0.5rem;
+}
+.__home .__video-container .__video .video .info .details span:first-child {
+  font-size: 0.78rem;
+}
+.__home .__video-container .__video .video .info .details span:last-child {
+  font-size: 0.68rem;
 }
 .__home .__video-container .__video .video:hover {
   opacity: 0.7;
@@ -241,7 +256,17 @@ body {
   padding: 1rem;
   padding-bottom: 10rem;
 }
-.__watch .videobox img {
+.__watch .videobox .video {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.__watch .videobox .video .spinner {
+  position: absolute;
+  align-self: center;
+}
+.__watch .videobox .video video {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 16/9;
@@ -266,7 +291,7 @@ body {
   border-radius: 10rem;
   object-fit: cover;
 }
-.__watch .videobox .row > div .btn.connect {
+.__watch .videobox .row > div .btn.subscribe-btn {
   background-color: #fff;
   color: rgba(15, 15, 15, 0.88);
   font-weight: 800;
@@ -275,7 +300,7 @@ body {
   padding-left: 0.5rem;
   margin-left: 1rem;
 }
-.__watch .videobox .row > div .btn.connect svg {
+.__watch .videobox .row > div .btn.subscribe-btn svg {
   margin-right: 0.3rem;
 }
 .__watch .videobox .row > div .profile {
@@ -374,6 +399,59 @@ body {
 }
 .__watch .card-body p {
   font-size: 0.8rem;
+}
+
+.__watch-bottom-control {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.__watch-bottom-control .play-pause-button,
+.__watch-bottom-control .fullscreen-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.__watch-bottom-control .play-pause-button,
+.__watch-bottom-control .fullscreen-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: #3498db;
+  cursor: pointer;
+  border-radius: 50%;
+  user-select: none;
+}
+.__watch-bottom-control .play-pause-button svg,
+.__watch-bottom-control .fullscreen-button svg {
+  fill: #fff;
+}
+.__watch-bottom-control .play-pause-button:active,
+.__watch-bottom-control .fullscreen-button:active {
+  background-color: rgba(52, 152, 219, 0.8);
+}
+.__watch-bottom-control .time-display {
+  border-radius: 100rem;
+  height: 40px;
+  padding: 0 1rem;
+  background-color: #0f0f0f;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.__watch-bottom-control .time-display svg {
+  fill: #fff;
+  margin-right: 0.5rem;
+}
+.__watch-bottom-control .fullscreen-button {
+  background-color: #0f0f0f;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 /*** MEDIA QUERIES ***/
