--- a/src/App.scss
+++ b/src/App.scss
@@ -234,16 +234,31 @@ body {
     .info {
      padding: 0.8rem 0.2rem;
      img {
-      width: 30px;
-      height: 30px;
+      width: 35px;
+      height: 35px;
       border-radius: 10rem;
+      background-color: rgba($primary-text-color, 0.1);
       object-fit: cover;
      }
      p {
       font-size: 0.8rem;
-      padding: 0 1rem;
+      padding: 0 0.5rem;
       margin: 0;
       text-transform: capitalize;
+     }
+     .details {
+      line-height: 0.78rem;
+      padding-top: 0.2rem;
+      span {
+       color: rgba($primary-text-color, 0.5);
+       padding: 0 0.5rem;
+      }
+      span:first-child {
+       font-size: 0.78rem;
+      }
+      span:last-child {
+       font-size: 0.68rem;
+      }
      }
     }
     &:hover {
@@ -266,13 +281,23 @@ body {
  padding: 1rem;
  padding-bottom: 10rem;
  .videobox {
-  img {
-   width: 100%;
-   object-fit: cover;
-   aspect-ratio: 16/9;
-   border-top-left-radius: 0.6rem;
-   border-top-right-radius: 0.6rem;
-   background-color: rgba($secondary-color, 0.5);
+  .video {
+   position: relative;
+   display: flex;
+   flex-direction: row; 
+   justify-content: center;
+   .spinner {
+    position: absolute;
+    align-self: center;
+   }
+   video {
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 16/9;
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
+    background-color: rgba($secondary-color, 0.5);
+   }
   }
   .row {
    padding: 2rem 1rem;
@@ -289,7 +314,7 @@ body {
      border-radius: 10rem;
      object-fit: cover;
     }
-    .btn.connect {
+    .btn.subscribe-btn {
      background-color: $primary-text-color;
      color: rgba($primary-color, 0.88);
      font-weight: 800;
@@ -348,39 +373,39 @@ body {
    }
   }
  }
- .__comments{
-    padding: 1rem;
-    margin: 1rem 0;
-    background-color: $secondary-color;
-    border: 1px solid rgba($primary-text-color, 0.1);
-    border-radius: 0.6rem;
-    .heading{
-        font-weight: 800;
-        margin: 0;
-        svg{
-            fill: $primary-text-color;
-            margin-right: 0.5rem;
-        }
-    }
-    .count{
-        margin: 0;
-        font-size: 0.7rem;
-        padding: 0.2rem;
-    }
-    button{
-        font-size: 0.7rem;
-        border: 0;
-        outline: none;
-        background-color: transparent;
-        color: rgba($primary-text-color, 0.5);
-        padding: 0.2rem 0.5rem;
-        margin-left: 0.5rem;
-        border-radius: 0.3rem;
-        height: 1.5rem;
-        &:hover{
-            background-color: rgba($primary-text-color, 0.1);
-        }
-    }
+ .__comments {
+  padding: 1rem;
+  margin: 1rem 0;
+  background-color: $secondary-color;
+  border: 1px solid rgba($primary-text-color, 0.1);
+  border-radius: 0.6rem;
+  .heading {
+   font-weight: 800;
+   margin: 0;
+   svg {
+    fill: $primary-text-color;
+    margin-right: 0.5rem;
+   }
+  }
+  .count {
+   margin: 0;
+   font-size: 0.7rem;
+   padding: 0.2rem;
+  }
+  button {
+   font-size: 0.7rem;
+   border: 0;
+   outline: none;
+   background-color: transparent;
+   color: rgba($primary-text-color, 0.5);
+   padding: 0.2rem 0.5rem;
+   margin-left: 0.5rem;
+   border-radius: 0.3rem;
+   height: 1.5rem;
+   &:hover {
+    background-color: rgba($primary-text-color, 0.1);
+   }
+  }
  }
  .card-body {
   background: $secondary-color !important;
@@ -402,6 +427,56 @@ body {
   p {
    font-size: 0.8rem;
   }
+ }
+}
+.__watch-bottom-control {
+ position: fixed;
+ bottom: 20px;
+ right: 20px;
+ display: flex;
+ align-items: center;
+ gap: 1rem;
+ .play-pause-button,
+ .fullscreen-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .play-pause-button,
+ .fullscreen-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: $primary-other-color;
+  cursor: pointer;
+  border-radius: 50%;
+  user-select: none;
+  svg {
+   fill: $primary-text-color;
+  }
+  &:active {
+   background-color: rgba($primary-other-color, 0.8);
+  }
+ }
+ .time-display {
+  border-radius: 100rem;
+  height: 40px;
+  padding: 0 1rem;
+  background-color: $primary-color;
+  border: 1px solid rgba($primary-text-color, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  svg {
+   fill: $primary-text-color;
+   margin-right: 0.5rem;
+  }
+ }
+ .fullscreen-button {
+  background-color: $primary-color;
+  border: 1px solid rgba($primary-text-color, 0.1);
  }
 }
 
