--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
 $primary-color: #0f0f0f;
 $secondary-color: #212529;
@@ -36,12 +36,29 @@ $primary-other-color: #3498db;
 
 body {
  margin: 0;
- font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+ font-family: "Poppins", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: $primary-color;
  color: $primary-text-color;
+ user-select: none;
+}
+
+img {
+ position: relative;
+}
+img::after {
+ content: "";
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ background: $secondary-color url(video-error-thumb.jpg) no-repeat center;
+ background-size: cover;
+ color: transparent;
 }
 
 .row {
@@ -203,76 +220,82 @@ body {
 /* __HOME */
 .__home {
  .__video-container {
-  .__video {
-   a {
+ }
+}
+
+.__video {
+ a {
+  width: 100%;
+  display: block;
+  text-decoration: none;
+  color: inherit;
+ }
+ .video {
+  .thumbnail {
+   position: relative;
+   width: 100%;
+   img {
     width: 100%;
-    display: block;
-    text-decoration: none;
-    color: inherit;
+    min-height: 200px;
+    aspect-ratio: 16/9;
+    background-color: rgba($primary-text-color, 0.1);
+    object-fit: cover;
+    border-radius: 0.8rem;
+    position: relative;
    }
-   .video {
-    .thumbnail {
-     position: relative;
-     width: 100%;
-     img {
-      width: 100%;
-      min-height: 200px;
-      aspect-ratio: 16/9;
-      background-color: rgba($primary-text-color, 0.1);
-      object-fit: cover;
-      border-radius: 0.8rem;
-     }
-     span {
-      position: absolute;
-      bottom: 0.5rem;
-      right: 0.5rem;
-      font-size: 0.8rem;
-      background-color: #1e1e1e;
-      border-radius: 0.2rem;
-      padding: 0 0.2rem;
-     }
+   span {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    font-size: 0.8rem;
+    background-color: #1e1e1e;
+    border-radius: 0.2rem;
+    padding: 0 0.2rem;
+   }
+  }
+  .info {
+   padding: 0.8rem 0.2rem;
+   img {
+    width: 35px;
+    height: 35px;
+    border-radius: 100rem;
+    background-color: rgba($primary-text-color, 0.1);
+    object-fit: cover;
+   }
+   p {
+    font-size: 0.8rem;
+    padding-bottom: 0.3rem;
+    margin: 0;
+    text-transform: capitalize;
+   }
+   .vws {
+    font-size: 0.7rem;
+    color: rgba($primary-text-color, 0.5);
+   }
+   .details {
+    line-height: 0.78rem;
+    padding-top: 0.2rem;
+    span {
+     color: rgba($primary-text-color, 0.5);
+     padding: 0 0.5rem;
     }
-    .info {
-     padding: 0.8rem 0.2rem;
-     img {
-      width: 35px;
-      height: 35px;
-      border-radius: 10rem;
-      background-color: rgba($primary-text-color, 0.1);
-      object-fit: cover;
-     }
-     p {
-      font-size: 0.8rem;
-      padding: 0 0.5rem;
-      margin: 0;
-      text-transform: capitalize;
-     }
-     .details {
-      line-height: 0.78rem;
-      padding-top: 0.2rem;
-      span {
-       color: rgba($primary-text-color, 0.5);
-       padding: 0 0.5rem;
-      }
-      span:first-child {
-       font-size: 0.78rem;
-      }
-      span:last-child {
-       font-size: 0.68rem;
-      }
-     }
+    span:first-child {
+     font-size: 0.78rem;
     }
-    &:hover {
-     opacity: 0.7;
-    }
-    &:active {
-     background-color: rgba($primary-text-color, 0.1);
-     border-top-left-radius: 0.8rem;
-     border-top-right-radius: 0.8rem;
-     outline: 1px solid rgba($primary-text-color, 0.2);
-     opacity: 1;
+    span:last-child {
+     font-size: 0.68rem;
     }
    }
+  }
+  &:hover {
+   opacity: 0.7;
+  }
+  &:active {
+   background-color: rgba($primary-text-color, 0.1);
+   border-top-left-radius: 0.8rem;
+   border-top-right-radius: 0.8rem;
+   outline: 1px solid rgba($primary-text-color, 0.2);
+   opacity: 1;
   }
  }
 }
@@ -281,12 +304,23 @@ body {
 .__watch {
  padding: 1rem;
  padding-bottom: 10rem;
+ .__other-videos{
+    padding-top: 3rem;
+ }
+ .row > div:first-child {
+  .__video {
+   width: 100%;
+   padding: 1rem 2rem;
+  }
+ }
  .videobox {
   .video {
    position: relative;
    display: flex;
-   flex-direction: row; 
+   flex-direction: row;
    justify-content: center;
+   border-top-left-radius: 0.6rem;
+   border-top-right-radius: 0.6rem;
    .spinner {
     position: absolute;
     align-self: center;
@@ -414,8 +448,8 @@ body {
   padding: 1.5rem;
   border: 1px solid rgba($primary-text-color, 0.1);
   h2 {
-   font-weight: 800;
-   font-size: 1.2rem;
+   font-weight: 400;
+   font-size: 1.1rem;
    text-transform: capitalize;
    letter-spacing: 1px;
    padding-bottom: 0.7rem;
@@ -448,8 +482,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   background-color: $primary-other-color;
   cursor: pointer;
   border-radius: 50%;
@@ -461,32 +495,14 @@ body {
    background-color: rgba($primary-other-color, 0.8);
   }
  }
- .time-display {
-  border-radius: 100rem;
-  height: 40px;
-  padding: 0 1rem;
-  background-color: $primary-color;
-  border: 1px solid rgba($primary-text-color, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  svg {
-   fill: $primary-text-color;
-   margin-right: 0.5rem;
-  }
- }
- .fullscreen-button {
-  background-color: $primary-color;
-  border: 1px solid rgba($primary-text-color, 0.1);
- }
 }
 
 /*** MEDIA QUERIES ***/
 @media screen and (max-width: 1500px) {
- .__home .row > div:first-child {
+ .__home > .row > div:first-child {
   display: none;
  }
- .__home .row > div:last-child {
+ .__home > .row > div:last-child {
   width: 100%;
  }
  .__commonCss {
@@ -581,10 +597,21 @@ body {
   .row > div {
    padding: 0 1rem !important;
   }
+  .row > div:first-child {
+   order: 2;
+  }
+  .card-body h2 {
+   font-size: 0.9rem !important;
+  }
   .videobox {
    h3 {
     font-size: 1rem;
     line-height: 1.6rem;
+   }
+   .spinner-border {
+    width: 2rem !important;
+    height: 2rem !important;
+    border-width: 0.28rem !important;
    }
    .row {
     padding: 1rem 0.4rem;
