--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ $primary-other-color: #3498db;
 
 ::-webkit-scrollbar {
  width: 7px;
+ height: 7px;
 }
 
 ::-webkit-scrollbar-track {
@@ -134,10 +135,28 @@ img::after {
   &:hover {
    background-color: rgba($primary-text-color, 0.1);
   }
-  &:active {
+  &:active,
+  &.active {
    background-color: rgba($primary-text-color, 0.15);
   }
  }
+
+ .__account-menu {
+  position: absolute;
+  right: 0;
+  width: 300px;
+  height: 400px;
+  background-color: $secondary-color;
+  border-radius: 0.8rem;
+  padding: 1rem;
+  z-index: 100000;
+  font-size: 0.8rem;
+  overflow-y: scroll;
+  &.hide {
+   display: none;
+  }
+ }
+
  .loading-bar-container {
   position: fixed;
   top: 0;
@@ -300,13 +319,42 @@ img::after {
  }
 }
 
+.__category-container {
+ margin: 0.1rem 0;
+ margin-bottom: 1rem;
+ white-space: nowrap;
+ .category {
+  height: fit-content;
+  width: fit-content;
+  padding: 0.3rem 0.8rem;
+  background-color: rgba($primary-text-color, 0.1);
+  color: $primary-text-color;
+  border-radius: 0.8rem;
+  border: 0;
+  font-size: 0.8rem;
+  margin: 0 0.5rem;
+  svg {
+   fill: $primary-text-color;
+   margin-top: -0.2rem;
+   margin-right: 1rem;
+  }
+  &.active {
+   background-color: rgba($primary-text-color, 0.7);
+   color: $primary-color;
+  }
+  &:hover {
+   opacity: 0.8;
+  }
+  &:active {
+   opacity: 0.6;
+  }
+ }
+}
+
 /* __WATCH */
 .__watch {
  padding: 1rem;
  padding-bottom: 10rem;
- .__other-videos {
-  padding-top: 3rem;
- }
  .row > div:first-child {
   .__video {
    width: 100%;
