--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,6 @@ body {
  -moz-osx-font-smoothing: grayscale;
  background-color: $primary-color;
  color: $primary-text-color;
- user-select: none;
 }
 
 img {
@@ -131,6 +130,15 @@ img::after {
   border-radius: 10rem !important;
   svg {
    fill: $primary-text-color;
+   margin-top: -0.2rem;
+  }
+  img{
+    display: inline-block;
+    width: 33px;
+    height: 33px;
+    border-radius: 100rem;
+    object-fit: cover;
+    box-shadow: 0 0 5px 1px rgba(255,255,255,0.4);
   }
   &:hover {
    background-color: rgba($primary-text-color, 0.1);
@@ -144,16 +152,20 @@ img::after {
  .__account-menu {
   position: absolute;
   right: 0;
-  width: 300px;
   height: 400px;
+  width: 0px;
   background-color: $secondary-color;
   border-radius: 0.8rem;
   padding: 1rem;
   z-index: 100000;
   font-size: 0.8rem;
   overflow-y: scroll;
-  &.hide {
-   display: none;
+
+  transition: all 0.1s ease-in-out, height 0.4s ease-in-out;
+  opacity: 0;
+  &.visible {
+    opacity: 1;
+    width: 300px;
   }
  }
 
