--- a/src/App.css
+++ b/src/App.css
@@ -142,20 +142,29 @@ img::after {
 .__navbar .__account-menu {
   position: absolute;
   right: 0;
-  height: 400px;
   width: 0px;
+  min-height: 400px;
   background-color: #212529;
   border-radius: 0.8rem;
-  padding: 1rem;
+  padding: 1.5rem;
   z-index: 100000;
   font-size: 0.8rem;
-  overflow-y: scroll;
-  transition: all 0.1s ease-in-out, height 0.4s ease-in-out;
+  overflow: hidden;
+  transition: all 0.1s ease-in-out;
   opacity: 0;
 }
 .__navbar .__account-menu.visible {
   opacity: 1;
   width: 300px;
+}
+.__navbar .__account-menu input {
+  margin: 0.5rem 0;
+  font-size: 0.8rem;
+  padding: 0.3rem 0.5rem;
+}
+.__navbar .__account-menu button {
+  font-size: 0.8rem;
+  margin: 0.4rem 0;
 }
 .__navbar .loading-bar-container {
   position: fixed;
