--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,13 @@ img::after {
  margin: 0 !important;
 }
 
+.alert {
+ .btn-close:hover,
+ .btn-close:focus {
+  box-shadow: none !important;
+ }
+}
+
 /*** __NAVBAR ***/
 .__navbar {
  width: 100%;
@@ -153,6 +160,16 @@ img::after {
    background-color: rgba($primary-text-color, 0.15);
   }
  }
+ #notifNumber {
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
+  font-size: 0.6rem;
+  padding-top: 0.3rem;
+  border-radius: 100rem;
+  margin-left: -1.2rem;
+  margin-top: 0.5rem;
+ }
 
  .__account-menu,
  .__notification-menu {
@@ -162,7 +179,6 @@ img::after {
   min-height: 400px;
   background-color: $secondary-color;
   border-radius: 0.8rem;
-  padding: 1.5rem;
   z-index: 100000;
   font-size: 0.8rem;
   overflow: hidden;
@@ -172,14 +188,29 @@ img::after {
    opacity: 1;
    width: 300px;
   }
-  input {
-   margin: 0.5rem 0;
-   font-size: 0.8rem;
-   padding: 0.3rem 0.5rem;
+  .spinner {
+   margin-top: 1rem;
   }
-  button {
-   font-size: 0.8rem;
-   margin: 0.4rem 0;
+  & > * > h5 {
+   margin: 0 !important;
+   padding: 1rem;
+   font-size: 0.9rem;
+   font-weight: 800;
+   color: $primary-text-color;
+   border-bottom: 1px solid rgba($primary-text-color, 0.1);
+  }
+  .__body {
+   width: 100%;
+   padding: 1rem;
+   input {
+    margin: 0.5rem 0;
+    font-size: 0.8rem;
+    padding: 0.3rem 0.5rem;
+   }
+   button {
+    font-size: 0.8rem;
+    margin: 0.4rem 0;
+   }
   }
  }
 
@@ -187,6 +218,34 @@ img::after {
   &.visible {
    opacity: 1;
    width: 400px;
+  }
+  .__body {
+   padding: 0;
+   .list-group {
+    max-height: 300px;
+    overflow-y: auto;
+    border-radius: 0;
+    user-select: none;
+    .list-group-item {
+     padding: 0.8rem 0.8rem;
+     border: 0;
+     border-bottom: 1px solid rgba($primary-text-color, 0.1);
+     background-color: transparent;
+     &:hover {
+      background-color: rgba($primary-text-color, 0.05) !important;
+     }
+     h6 {
+      font-size: 0.8rem;
+      font-weight: 800;
+      margin: 0;
+      padding-bottom: 0.2rem;
+     }
+     p {
+      font-size: 0.7rem;
+      margin: 0;
+     }
+    }
+   }
   }
  }
 
